<resources>
    <string name="app_name">PS Diet</string>
    <string name="full_app_name">Післяопераційна Дієта</string>
    <string name="male">Чоловік</string>
    <string name="female">Жінка</string>
    <string name="user_name">Ваше ім\'я:</string>
    <string name="user_age">Ваш вік:</string>
    <string name="user_weight">Ваша вага:</string>
    <string name="user_height">Ваш зріст:</string>
    <string name="user_name_hint">ім\'я(Іван)</string>
    <string name="user_age_hint">вік(22)</string>
    <string name="user_weight_hint">вага(70)</string>
    <string name="user_height_hint">Зріст(170)</string>
    <string name="user_gender">Стать:</string>
    <string name="forward">Вперед</string>
    <string name="choose_your_diet">Оберіть вашу дієту</string>
    <string name="breakfast">Сніданок</string>
    <string name="calories">Калорії(кКал)</string>
    <string name="proteins">Білки</string>
    <string name="fats">Жири</string>
    <string name="carbohydrates">Вуглеводи</string>
    <string name="lunch">Ланч</string>
    <string name="choose_meal">Додати страву</string>
    <string name="list_adapter_dish_name">Назва страви</string>
    <string name="amount">Кількість</string>
    <string name="units">Одиниці вимірювання</string>
    <string name="dinner">Обід</string>
    <string name="supper">Вечеря</string>
    <string name="ok">Ок</string>
    <string name="cancel">Відміна</string>
    <string name="refresh">Оновити</string>
    <string name="delete_current_user">Видалити дані користувача</string>
    <string name="author">Шпадківський Олександр \n БС-33</string>
</resources>
