<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.dmitriyvedmid.psdiet.DietEditIntent.DietEditActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--breakfast_cardview-->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp"
                app:elevation="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/breakfast"
                        android:textSize="20sp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="55dp"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/breakfast_calories"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.33"
                            android:text="@string/calories"
                            android:textSize="12sp"/>

                        <TextView
                            android:id="@+id/breakfast_proteins"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.33"
                            android:text="@string/proteins"
                            android:textSize="12sp"/>

                        <TextView
                            android:id="@+id/breakfast_fats"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.33"
                            android:text="@string/fats"
                            android:textSize="12sp"/>

                        <TextView
                            android:id="@+id/breakfast_carbohydrates"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.33"
                            android:text="@string/carbohydrates"
                            android:textSize="12sp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/breakfast_add_dish_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <Button
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:background="@drawable/ic_action_add"
                            android:padding="10dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/choose_meal"
                            android:textSize="20sp"/>
                    </LinearLayout>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/edit_diet_breakfast_recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <!--lunch_cardview-->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp"
                app:elevation="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/lunch"
                        android:textSize="20sp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="55dp"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/lunch_calories"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.33"
                            android:text="@string/calories"
                            android:textSize="12sp"/>

                        <TextView
                            android:id="@+id/lunch_proteins"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.33"
                            android:text="@string/proteins"
                            android:textSize="12sp"/>

                        <TextView
                            android:id="@+id/lunch_fats"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.33"
                            android:text="@string/fats"
                            android:textSize="12sp"/>

                        <TextView
                            android:id="@+id/lunch_carbohydrates"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.33"
                            android:text="@string/carbohydrates"
                            android:textSize="12sp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/lunch_add_dish_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <Button
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:background="@drawable/ic_action_add"
                            android:padding="10dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/choose_meal"
                            android:textSize="20sp"/>
                    </LinearLayout>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/edit_diet_lunch_recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <!--dinner_cardview-->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp"
                app:elevation="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/dinner"
                        android:textSize="20sp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="55dp"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/dinner_calories"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.33"
                            android:text="@string/calories"
                            android:textSize="12sp"/>

                        <TextView
                            android:id="@+id/dinner_proteins"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.33"
                            android:text="@string/proteins"
                            android:textSize="12sp"/>

                        <TextView
                            android:id="@+id/dinner_fats"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.33"
                            android:text="@string/fats"
                            android:textSize="12sp"/>

                        <TextView
                            android:id="@+id/dinner_carbohydrates"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.33"
                            android:text="@string/carbohydrates"
                            android:textSize="12sp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/dinner_add_dish_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <Button
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:background="@drawable/ic_action_add"
                            android:padding="10dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/choose_meal"
                            android:textSize="20sp"/>
                    </LinearLayout>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/edit_diet_dinner_recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <!--supper_cardview-->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp"
                app:elevation="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/supper"
                        android:textSize="20sp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:layout_marginStart="55dp">

                        <TextView
                            android:id="@+id/supper_calories"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.33"
                            android:text="@string/calories"
                            android:textSize="12sp"/>

                        <TextView
                            android:id="@+id/supper_proteins"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.33"
                            android:text="@string/proteins"
                            android:textSize="12sp"/>

                        <TextView
                            android:id="@+id/supper_fats"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.33"
                            android:text="@string/fats"
                            android:textSize="12sp"/>

                        <TextView
                            android:id="@+id/supper_carbohydrates"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.33"
                            android:text="@string/carbohydrates"
                            android:textSize="12sp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/supper_add_dish_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <Button
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:background="@drawable/ic_action_add"
                            android:padding="10dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/choose_meal"
                            android:textSize="20sp"/>
                    </LinearLayout>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/edit_diet_supper_recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
